@@ -1,0 +1,96 @@
+<?
+/*
+Gibbon, Flexible & Open School System
+Copyright (C) 2010, Ross Parker
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+*/
+
+session_start() ;
+
+//Module includes
+include "./modules/" . $_SESSION[$guid]["module"] . "/moduleFunctions.php" ;
+
+if (isActionAccessible($guid, $connection2, "/modules/Planner/report_goldStars_staff.php")==FALSE) {
+	//Acess denied
+	print "<div class='error'>" ;
+		print "You do not have access to this action." ;
+	print "</div>" ;
+}
+else {
+	//Proceed!
+	print "<div class='trail'>" ;
+	print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>Home</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . getModuleName($_GET["q"]) . "</a> > </div><div class='trailEnd'>Staff Gold Stars</div>" ;
+	print "</div>" ;
+	
+	try {
+		$data=array("gibbonSchoolYearID"=>$_SESSION[$guid]["gibbonSchoolYearID"], "gibbonSchoolYearID2"=>$_SESSION[$guid]["gibbonSchoolYearID"]); 
+		$sql="SELECT gibbonPerson.gibbonPersonID AS personID, surname, preferredName, (COUNT(*)/(SELECT COUNT(*) FROM gibbonPlannerEntry JOIN gibbonCourseClass ON (gibbonPlannerEntry.gibbonCourseClassID=gibbonCourseClass.gibbonCourseClassID) JOIN gibbonCourse ON (gibbonCourseClass.gibbonCourseID=gibbonCourse.gibbonCourseID) JOIN gibbonCourseClassPerson ON (gibbonCourseClassPerson.gibbonCourseClassID=gibbonCourseClass.gibbonCourseClassID) WHERE gibbonPersonID=personID AND gibbonSchoolYearID=:gibbonSchoolYearID AND date<='" . date("Y-m-d") . "')) as 'stars' FROM gibbonPlannerEntryLike JOIN gibbonPlannerEntry ON (gibbonPlannerEntryLike.gibbonPlannerEntryID=gibbonPlannerEntry.gibbonPlannerEntryID) JOIN gibbonCourseClass ON (gibbonPlannerEntry.gibbonCourseClassID=gibbonCourseClass.gibbonCourseClassID) JOIN gibbonCourseClassPerson ON (gibbonCourseClassPerson.gibbonCourseClassID=gibbonCourseClass.gibbonCourseClassID) JOIN gibbonPerson ON (gibbonCourseClassPerson.gibbonPersonID=gibbonPerson.gibbonPersonID) JOIN gibbonCourse ON (gibbonCourseClass.gibbonCourseID=gibbonCourse.gibbonCourseID) WHERE role='Teacher' AND status='Full' AND gibbonSchoolYearID=:gibbonSchoolYearID2 GROUP BY gibbonPerson.gibbonPersonID ORDER BY stars DESC" ;
+		$result=$connection2->prepare($sql);
+		$result->execute($data);
+	}
+	catch(PDOException $e) { 
+		print "<div class='error'>" . $e->getMessage() . "</div>" ; 
+	}
+
+	print "<table style='width: 100%'>" ;
+		print "<tr class='head'>" ;
+			print "<th>" ;
+				print "Position" ;
+			print "</th>" ;
+			print "<th>" ;
+				print "Teacher" ;
+			print "</th>" ;
+			print "<th>" ;
+				print "Stars/Lesson" ;
+			print "</th>" ;
+			print "</th>" ;
+		print "</tr>" ;
+		
+		$count=0;
+		$rowNum="odd" ;
+		while ($row=$result->fetch()) {
+			if (is_null($log[$row["gibbonRollGroupID"]])) {
+				if ($count%2==0) {
+					$rowNum="even" ;
+				}
+				else {
+					$rowNum="odd" ;
+				}
+				$count++ ;
+				
+				//COLOR ROW BY STATUS!
+				print "<tr class=$rowNum>" ;
+					print "<td>" ;
+						print $count ;
+					print "</td>" ;
+					print "<td>" ;
+						print formatName("", $row["preferredName"], $row["surname"], "Staff", false, true) ;
+					print "</td>" ;
+					print "<td>" ;
+						print $row["stars"] ;
+					print "</td>" ;
+				print "</tr>" ;
+			}
+		}
+		if ($count==0) {
+			print "<tr class=$rowNum>" ;
+				print "<td colspan=3>" ;
+					print "There are no results in this report." ;
+				print "</td>" ;
+			print "</tr>" ;
+		}
+	print "</table>" ;
+}
+?>
